--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
   
 
   <h1>Microsoft Customer Service</h1>
-   <a href="tel:+1-217-284-4691" class="call-button">Call Now</a><br>
-   <a href="tel:+1-217-284-4691" class="call-button">+1-877-481-2204</a>
+   <a href="tel:+1-877-481-2204" class="call-button">Call Now</a><br>
+   <a href="tel:+1-877-481-2204" class="call-button">+1-877-481-2204</a>
   <p>Discover unparalleled assistance and support with Microsoft. Our devoted customer service team is at your beck and call, ready to address any inquiries or concerns you may have regarding Microsoft services. Whether it's technical assistance, queries about your Microsoft Account, guidance with your Microsoft device, or navigating through our services, rest assured that our seasoned experts are just a phone call away. Experience the epitome of support and let us elevate your Microsoft journey with unparalleled excellence.</p>
   
  
  <h1>Easily resolve your queries by contacting our dedicated support team at the provided number.</h1>
 
   
-  <a href="tel:+1-217-284-4691
-" class="call-button">Toll-Free Number</a>
+  <a href="tel:+1-877-481-2204
+ class="call-button">Toll-Free Number</a>
   <p class="footer">© 2024 Microsoft Inc. All rights reserved.</p>
 
 </body>
