--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   
 
   <h1>Email Customer Service</h1>
-   <a href="tel:support@emailrecovery.com" class="call-button">Call Now</a><br>
+   <a href="tel:support@emailrecovery.com" class="call-button">Eamil us</a><br>
    <a href="tel:support@emailrecovery.com" class="call-button">support@emailrecovery.com</a>
   <p>Discover unparalleled assistance and support with Email. Our devoted customer service team is at your beck and call, ready to address any inquiries or concerns you may have regarding Email services. Whether it's technical assistance, queries about your Email Account, guidance with your Email device, or navigating through our services, rest assured that our seasoned experts are just a phone call away. Experience the epitome of support and let us elevate your Email journey with unparalleled excellence.</p>
   
